2008-XX-XX:
    * version 2.0 (probably)
    * IMPORTANT: Due to much improved autocompletion, changed default 'complete' option
      value to 'sfl', listing intelligent Firefox location bar results. Removed possibility
      to use 'h' in 'complete'.
    * IMPORTANT: AlwaysHint modes were removed as they didn't make too
      much sense with the new hint system
    * IMPORTANT: command actions now take an args object, returned from
      commands.parseArgs, as their first argument. This will break any commands
      not using the args parser explicitly.  The old string value is now
      available via args.string.
    * IMPORTANT: 'verbose' is now used for message levels. Logging is
      controlled by the extensions.liberator.loglevel preference.
    * IMPORTANT: :viusage and :exusage now jump to the help index, use the
      special versions for the old behavior
    * IMPORTANT: renamed Startup and Quit autocmd events to VimperatorEnter and
      VimperatorLeave respectively

    * remove spaces and newlines when open urls starting with http:// or similar
	  before :o http://linux .com would search for http://linux and for .com, now
	  it just opens linux.com. Also handy when pasting broken urls with p or P.
    * add 'wildcase' option
    * 'linkbgcolor', 'linkfgcolor', ... have been replaced with highlight
      groups, HintElem and HintActive
    * new 'followhints' option
    * :buffers supports a filter now to only list buffers matching filter (vim
      incompatible, but consistent with other commands)
    * Favicon support in many places
    * add 'Fullscreen' autocommmand
    * add :colorscheme
    * multibyte support for hints (thanks Xie&Tian)
    * add 'exrc'
    * add 'errorbells'
    * add shell command completion for :!
    * add :map <silent> to prevent a mapping from being echoed
    * add guioptions=nN to number tabs
    * add :loadplugins command
    * add . mapping
    * add N% normal mode command